log
Fri 12 May 2023 03:04:42 AM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
0706969
Fri 12 May 2023 03:04:53 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
d76a08d
Fri 12 May 2023 03:06:14 AM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|2
total_score: 20/70
6dda77d
Fri 12 May 2023 03:19:46 AM UTC: 
 heap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:38:65: error: ‘p’ undeclared (first use in this function); did you mean ‘pq’?
   38 |   while (currentIndex >0&& pq->heapArray[parentIndex].priority< p){
      |                                                                 ^
      |                                                                 pq
heap.c:38:65: note: each undeclared identifier is reported only once for each function it appears in
heap.c:45:30: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   45 |   pq->heapArray[currentIndex],priority =p;
      |                              ^
cc1: all warnings being treated as errors
Compilation failed
1f2af54
Fri 12 May 2023 03:20:33 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:45:41: error: ‘p’ undeclared (first use in this function); did you mean ‘pq’?
   45 |   pq->heapArray[currentIndex],priority =p;
      |                                         ^
      |                                         pq
heap.c:45:41: note: each undeclared identifier is reported only once for each function it appears in
heap.c:45:30: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   45 |   pq->heapArray[currentIndex],priority =p;
      |                              ^
cc1: all warnings being treated as errors
Compilation failed
f7d4e96
Fri 12 May 2023 03:20:42 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:45:30: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   45 |   pq->heapArray[currentIndex],priority =priority;
      |                              ^
cc1: all warnings being treated as errors
Compilation failed
74ac974
Fri 12 May 2023 03:20:47 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|2
total_score: 35/70
7df6f60
